# kicad-backport-cplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-linux.sh  build-macos.sh  build.ps1  build.sh  build_with_gcc.sh  kicad_backport_sources.txt
cmake/: kicad_backport_sources.txt
docs/: README.de-DE.md  README.es-ES.md  README.fr-FR.md  README.it-IT.md  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  kicad-backport-converter-format-differences.de-DE.md  kicad-backport-converter-format-differences.es-ES.md  kicad-backport-converter-format-differences.fr-FR.md  kicad-backport-converter-format-differences.it-IT.md  kicad-backport-converter-format-differences.ja-JP.md  kicad-backport-converter-format-differences.ko-KR.md  kicad-backport-converter-format-differences.md  kicad-backport-converter-format-differences.zh-CN.md  kicad-file-format-version-differences.de-DE.md  kicad-file-format-version-differences.es-ES.md  kicad-file-format-version-differences.fr-FR.md  kicad-file-format-version-differences.it-IT.md  kicad-file-format-version-differences.ja-JP.md  kicad-file-format-version-differences.ko-KR.md  kicad-file-format-version-differences.md  kicad-file-format-version-differences.zh-CN.md  kicad-format-migration-implementation-strategy.de-DE.md  kicad-format-migration-implementation-strategy.es-ES.md  kicad-format-migration-implementation-strategy.fr-FR.md  kicad-format-migration-implementation-strategy.it-IT.md  kicad-format-migration-implementation-strategy.ja-JP.md  kicad-format-migration-implementation-strategy.ko-KR.md  kicad-format-migration-implementation-strategy.md  kicad-format-migration-implementation-strategy.zh-CN.md
include/kicad_backport/: compat.h  filesystem.h  kicad_backport.h  kicad_backport_legacy.h  kicad_backport_pathmap.h  kicad_backport_report.h  kicad_backport_rules.h  kicad_backport_upgrade.h  kicad_backport_util.h  kicad_backport_versions.h  sexpr.h
scripts/: setup-cross.ps1  setup-cross.sh
src/: filesystem.cpp  kicad_backport.cpp  kicad_backport_document.cpp  kicad_backport_legacy.cpp  kicad_backport_pathmap.cpp  kicad_backport_report.cpp  kicad_backport_rule_rewriters.cpp  kicad_backport_rules.cpp  kicad_backport_upgrade.cpp  kicad_backport_util.cpp  kicad_backport_versions.cpp  main.cpp  sexpr.cpp
src/internal/: kicad_backport_rule_rewriters.h
